fixing container height

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -27,7 +27,6 @@ li {
     max-width: 960px;
     width: 100%;
     margin: 0 auto;
-    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -46,7 +45,7 @@ header {
 
     .profilePic {
         display: block;
-        margin: 0 auto 24px;
+        margin: 24px auto 24px;
         border-radius: 50%;
         width: 100px;
         height: 100px;
